FIx:Dropdown on mobile responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -51,5 +51,23 @@
    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
    backdrop-filter: blur(5px); /* Adjust the blur intensity as needed */
  }
+
+ .dropdown{
+   animation-name: drop;
+   animation-duration: 1s;
+   animation-delay: 0;
+   animation-timing-function: ease-in-out;
+   transition: opacity 0.3s ease-in-out;
+ }
+ @keyframes drop {
+   from {
+     opacity: 0.5;
+     top: 10;
+   }
+   to {
+     opacity: 1;
+     top: 100;
+   }
+ }
  
  
